--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -13,3 +13,4 @@ logging.level.web=${SPRING_WEB_LOG_LEVEL}
 logging.level.ca.bc.gov.educ.api=${APP_LOG_LEVEL}
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+spring.mvc.log-request-details=${SPRING_SHOW_REQUEST_DETAILS}
