--- a/tools/jenkins/Jenkinsfile
+++ b/tools/jenkins/Jenkinsfile
@@ -14,8 +14,8 @@ pipeline{
       OWNER = 'bcgov'
       JOB_NAME = 'main'
       TAG = 'latest'
-      TARGET_ENV = 'dev'
-      STAGING_ENV = 'Dev'
+      TARGET_ENV = 'tools'
+      STAGING_ENV = 'Tools'
       TARGET_ENVIRONMENT = "${NAMESPACE}-${TARGET_ENV}"
 
       APP_DOMAIN = 'apps.silver.devops.gov.bc.ca'
@@ -24,8 +24,8 @@ pipeline{
       DC_URL = "https://raw.githubusercontent.com/${OWNER}/${REPO_NAME}/main/tools/openshift/api.dc.ocp4.yaml"
       MIN_REPLICAS = "1"
       MAX_REPLICAS = "1"
-      MIN_CPU = "50m"
-      MAX_CPU = "150m"
+      MIN_CPU = "100m"
+      MAX_CPU = "200m"
       MIN_MEM = "400Mi"
       MAX_MEM = "800Mi"
   }
