--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.ca.bc.gov.educ.api=${APP_LOG_LEVEL}
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 spring.mvc.log-request-details=${SPRING_SHOW_REQUEST_DETAILS}
+spring.data.redis.repositories.enabled=false
+spring.redis.client-name=api-gateway
