--- a/api/src/main/resources/application-openshift.properties
+++ b/api/src/main/resources/application-openshift.properties
@@ -10,6 +10,8 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${TOKEN_ISSUER_URL}/protoc
 url.api.student.v1=${URL_API_STUDENT_V1}
 logging.level.web=${SPRING_WEB_LOG_LEVEL}
 logging.level.org.springframework.cloud=${SPRING_WEB_LOG_LEVEL}
+spring.redis.cluster.max-redirects=3
+spring.redis.cluster.nodes=${URL_REDIS}
 logging.level.ca.bc.gov.educ.api=${APP_LOG_LEVEL}
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
